css/janusweb.css
@charset "UTF-8";

.dark {
  font-family: "Open Sans Regular", sans-serif;
}
.dark input.ui_input_element {
}
.janusweb_room_url {
  font-weight: bold;
}
.janusweb_room_source {
  height: 40em;
  width: 60em;
  max-width: 100%;
  max-height: 100%;
}
.janusweb_room_source textarea {
  position: absolute;
  top: 1%;
  bottom: 1%;
  left: 1%;
  right: 1%;
  width: 98%;
}
.janusweb_websurface {
  width: 1000px;
  height: 1000px;
  backface-visibility: hidden;
  pointer-events: all;
}
.janusweb_websurface * {
  pointer-events: all;
}
.janusweb_websurface.state_uninitialized {
  background: #66ff66;
}
.janusweb_websurface.state_uninitialized:hover {
  background: red;
}
.janusweb_websurface iframe {
  width: 1000px;
  height: 1000px;
}
.engine_view .engine_systems_render_css3d {
  position: absolute;
  top: 0;
  left: 0;
  pointer-events: none;
  transform: scale(1);
  backface-visibility: none;
}
.janusweb_ui_navigation {
  position: fixed;
  top: 0;
  left: 0;
  z-index: 500;
  margin: .4em;
}
.janusweb_ui_navigation .ui_button {
  padding: .6em;
  line-height: 1.6em;
  width: 3.2em;
}
.janusweb_ui_navigation .ui_input {
  display: inline-block;
}
.janusweb_ui_navigation .ui_input_element {
  display: inline-block;
  width: 40em;
  line-height: 1.6em;
  background: #666;
  border: 1px solid #0e705a;
  color: white;
  padding: .4em 1em;
}
.dark .janusweb_ui_navigation .ui_input_element:focus {
  border-color: #090;
  box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(0, 150, 0, 0.6);
  background: #777;
}

.dark .ui_window.state_active {
  border: 1px solid #0e705a;
}
.dark .ui_window .ui_window_titlebar {
  font-family: "Open Sans Regular", sans-serif;
  background: rgba(50,75,74,.4);
  border-bottom: 0;
  border-radius: .5em .5em 0 0;
  text-align: center;
}
.dark .ui_window .ui_window_titlebar span {
  text-transform: uppercase;
  pointer-events: none;
}
.dark .ui_window.state_active .ui_window_titlebar,
.dark .ui_window:hover .ui_window_titlebar {
  background: rgba(50,75,74,.8);
}
.dark .ui_window .ui_window_controls .ui_button {
  color: #06e05a;
  border: 1px solid #06e05a;
  border-radius: 12px;
  width: 24px;
  height: 24px;
}
.ui_window .ui_window_content.engine_configuration {
  padding: 0;
}
.dark .engine_configuration .ui_tabs>ul {
  background: rgba(50,75,74,.4);
  border-bottom: 2px solid white;
}
.dark .ui_window.state_active .engine_configuration .ui_tabs>ul,
.dark .ui_window:hover .engine_configuration .ui_tabs>ul {
  background: rgba(50,75,74,.8);
}
.dark .engine_configuration .ui_tabs>ul>li {
  background: transparent;
  font-weight: normal;
  font-size: 1em;
  padding: .7em 0 .6em 0;
  width: 8em;
}
.dark .engine_configuration .ui_tabs>ul>li.state_selected,
.dark .engine_configuration .ui_tabs>ul>li.state_selected.state_hover {
  background: white;
  border-radius: 0;
  border: 0;
}
.dark .engine_configuration .ui_tabs>ul>li.state_hover {
  border: 0;
  background: rgba(255,255,255,.4);
  border-radius: 0;
}
.engine_configuration .engine_config_section {
  width: auto;
}
.ui_window .ui_window_content.engine_configuration {
  width: 30em;
}
/* ... */

